fix: Remove concept of AppAdmin role
