# packages/api/internal/core/handlers/http.go
@@ -28,108 +28,6 @@ func NewHTTPHandler(service ports.PlannerService) *HTTPHandler {
 }
 
 /*
-Endpoint: GET /api/appadmin/users
-*/
-func (hdl *HTTPHandler) ListUsers(c *gin.Context) {
-	info := parseAuthHeader(c.Request.Header.Get("Authorization"))
-
-	if info.role != roles.AppAdmin {
-		log.Error().Msgf("'%s' is not App Admin.", info.userName)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Not Administrator.",
-		})
-		return
-	}
-
-	users, err := hdl.svc.ListUsers()
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to list users.",
-		})
-		return
-	}
-
-	response := ListUsersResponse{
-		Users: make([]ListUsersUserResponse, 0, len(users)),
-	}
-	for _, u := range users {
-		response.Users = append(response.Users, ListUsersUserResponse{
-			Id:        u.Id,
-			Name:      u.Name,
-			CreatedAt: u.CreatedAt.Format(time.RFC3339),
-			Role:      string(u.Role),
-		})
-	}
-
-	log.Info().Msgf("Listed %d users.", len(users))
-	c.JSON(http.StatusOK, response)
-}
-
-/*
-Endpoint: DELETE /api/appadmin/users/:userId
-*/
-func (hdl *HTTPHandler) UnregisterUser(c *gin.Context) {
-	info := parseAuthHeader(c.Request.Header.Get("Authorization"))
-
-	if info.role != roles.AppAdmin {
-		log.Error().Msgf("'%s' is not App Admin.", info.userName)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Not Administrator.",
-		})
-		return
-	}
-	c.Status(http.StatusNotImplemented)
-}
-
-/*
-Endpoint: POST /api/appadmin/users
-
-Payload:
-{"name":"user name","password":"user password"}
-*/
-func (hdl *HTTPHandler) RegisterUser(c *gin.Context) {
-
-	info := parseAuthHeader(c.Request.Header.Get("Authorization"))
-
-	if info.role != roles.AppAdmin {
-		log.Error().Msgf("'%s' is not App Admin.", info.userName)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Not Administrator.",
-		})
-		return
-	}
-
-	var request RegisterUserRequest
-	err := c.BindJSON(&request)
-	if err != nil {
-		log.Error().Msgf("Invalid request: %s", err.Error())
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Invalid request.",
-		})
-
-		return
-	}
-
-	user, err := hdl.svc.RegisterUser(request.Name, request.Password)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to register user.",
-		})
-		return
-	}
-
-	response := &RegisterUserResponse{
-		Id:        user.Id,
-		Name:      user.Name,
-		CreatedAt: user.CreatedAt.Format(time.RFC3339),
-	}
-
-	log.Info().Msgf("User '%s' registered with id '%s'.", user.Id, user.Name)
-
-	c.JSON(http.StatusCreated, response)
-}
-
-/*
 Endpoint: POST /api/groups/:groupId/comments
 Payload:
 
