# packages/api/internal/core/handlers/models.go
@@ -5,33 +5,11 @@ import (
 	"time"
 )
 
-type ListUsersUserResponse struct {
-	Id        string `json:"id"`
-	Name      string `json:"name"`
-	CreatedAt string `json:"createdAt"`
-	Role      string `json:"role"`
-}
-
-type ListUsersResponse struct {
-	Users []ListUsersUserResponse `json:"users"`
-}
-
 type CreateGroupRequest struct {
 	Name string `json:"name"`
 }
 
 type CreateGroupResponse struct {
-	Id        string `json:"id"`
-	Name      string `json:"name"`
-	CreatedAt string `json:"createdAt"`
-}
-
-type RegisterUserRequest struct {
-	Name     string `json:"name"`
-	Password string `json:"password"`
-}
-
-type RegisterUserResponse struct {
 	Id        string `json:"id"`
 	Name      string `json:"name"`
 	CreatedAt string `json:"createdAt"`
