# packages/api/internal/core/ports/services.go
@@ -7,9 +7,6 @@ import (
 )
 
 type PlannerService interface {
-	RegisterUser(name string, password string) (*domain.User, error)
-	UnregisterUser(username string) error
-	ListUsers() ([]*domain.User, error)
 	CreateGroup(memberId string, memberName string, groupName string) (*domain.Group, error)
 	CreateMember(requesterMemberId string, groupId string, memberName string, admin bool, guest bool) (*domain.Member, error)
 	CreateSchedule(memberId string, groupId string, year int, week int, schedule *domain.WeeklySchedule) error
